# backplane

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml
dashboard/: Dockerfile  package.json  server.js
dashboard/public/: app.js  index.html  styles.css
docs/: ARCHITECTURE.md  DEMO.md
include/: redis_store.h  scheduler_policy.h  task_print.h  task_record.h
proto/: backplane.proto
scripts/: run_crash_demo.sh  run_preemption_demo.sh  run_priority_demo.sh  run_recovery_benchmark.sh  run_retry_demo.sh
src/: client.cpp  redis_store.cpp  server.cpp  task_print.cpp  worker.cpp
tests/: scheduler_policy_test.cpp
